--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <onclick="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+          <p>Some text. Some text. Some text.</p>
+        <p>Some text. Some text. Some text.</p>
     </div>
       <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
 
