--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <onclick="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
-          <p>Some text. Some text. Some text.</p>
-        <p>Some text. Some text. Some text.</p>
-    </div>
-      <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
+      <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      </div>
 
     <div class="w3-col m3">
       <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
