--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body, html {
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
+      <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black"><div class="w3-col m3">
       <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
       </div>
 
