--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am Koko Niitani.</p>
+      <p>Welcome to my website. I am Koko Niitani. These are my works I have done in Computer Science Class.</p>
     </div>
   </div>
 
