--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@ body, html {
       <div class="w3-col m3">
       <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" onclick="onClick(this)" class="w3-hover-opacity" alt="Hanyu Yuzuru">
       </div>
+      <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">"HanyuYuzuru.png"</button>
+      <span onclick="document.getElementById('id01').style.display='none'" 
+        class="w3-button w3-display-topright">&times;</span>
+        <h2>Modal Header</h2>
+      </header>
+      <div class="w3-container">
+        <p>Some text..</p>
+        <p>Some text..</p>
 
     <div class="w3-col m3">
       <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
