--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ body, html {
 </div>
 
     <div class="w3-col m3">
-      <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
+      <img src="https://www.w3schools.com/w3images/p2.Screen Shot 2019-02-12 at 12.49.07 PM.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      </div>
 
     <div class="w3-col m3">
       <img src="https://www.w3schools.com/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
