--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
       <div class="w3-col m3">
-      <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" onclick="onClick(this)" class="w3-hover-opacity" alt="Hanyu Yuzuru">
+      <img src="HanyuYuzuru.png" style="width:100%" onclick="onClick(this)" onclick="document.getElementById('modal01').style.display='block'" class="w3-hover-opacity" alt="Hanyu Yuzuru">
       </div>
 
     <div class="w3-col m3">
@@ -164,7 +164,6 @@ body, html {
   <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
     <p id="caption" class="w3-opacity w3-large"></p>
-      <p>羽生譲です</p>
   </div>
 </div>
 
